update endpoints, add otelgin
